[gd_scene load_steps=11 format=3 uid="uid://bceqwyu2w41cd"]

[ext_resource type="Texture2D" uid="uid://d3aacus553ri4" path="res://Png/LevelsBackgorunds/SandBackground.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cd1lqtcnyujah" path="res://Png/LevelsBackgorunds/stone.png" id="2"]
[ext_resource type="Script" path="res://Script/Level1.gd" id="4"]
[ext_resource type="PackedScene" path="res://Door.tscn" id="5"]
[ext_resource type="PackedScene" path="res://ChestBox/Chest.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://c4gy3ad6l7clg" path="res://KnightPlayer.tscn" id="7"]
[ext_resource type="Script" path="res://ChestBox/Chest.gd" id="8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rd7b"]
texture = ExtResource("2")
texture_region_size = Vector2i(19, 19)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="1"]
sources/1 = SubResource("TileSetAtlasSource_2rd7b")

[sub_resource type="CircleShape2D" id="8"]
radius = 32.0

[node name="Level1" type="Node2D"]
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(160, 90)
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(0, 0, 320, 180)

[node name="SandWalls" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("1")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 131073, 0, -65535, 131073, 0, -65534, 1, 0, -65533, 1, 0, -65532, 131073, 0, -65531, 1, 0, -65530, 131073, 0, -65529, 1, 0, -65528, 131073, 0, -65527, 1, 0, -65526, 131073, 0, -65525, 1, 0, -65524, 131073, 0, -65523, 1, 0, -65522, 131073, 0, -65521, 1, 0, -65520, 131073, 0, -65519, 1, 0, -65518, 131073, 0, -65517, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 131073, 0, 262164, 131073, 0, 327700, 131073, 0, 393236, 131073, 0, 458772, 131073, 0, 524308, 131073, 0, 589844, 131073, 0, 655380, 1, 0, 720915, 1, 0, 720914, 1, 0, 720913, 131073, 0, 720912, 1, 0, 720911, 1, 0, 720910, 1, 0, 720909, 1, 0, 720908, 1, 0, 720907, 1, 0, 720906, 131073, 0, 720905, 1, 0, 720904, 1, 0, 720903, 131073, 0, 720902, 1, 0, 720901, 131073, 0, 720900, 1, 0, 720899, 1, 0, 720898, 1, 0, 720897, 1, 0, 720896, 1, 0, 655360, 131073, 0, 720895, 1, 0, 655359, 131073, 0, 589823, 131073, 0, 524287, 131073, 0, 458751, 1, 0, 393215, 131073, 0, 327679, 131073, 0, 262143, 131073, 0, 196607, 131073, 0, 131071, 131073, 0, 65535, 1, 0, 0, 131073, 0, 655379, 131073, 0, 10, 1, 0, 65546, 1, 0, 131082, 131073, 0, 14, 1, 0, 65550, 131073, 0, 131086, 131073, 0, 131087, 131073, 0, 3, 131073, 0, 65539, 1, 0, 131075, 131073, 0, 131074, 1, 0, 131081, 131073, 0, 65542, 1, 0, 655363, 131073, 0, 589827, 131073, 0, 524291, 131073, 0, 524292, 131073, 0, 458755, 131073, 0, 589832, 131073, 0, 655368, 1, 0, 524296, 131073, 0, 458760, 131073, 0, 458761, 131073, 0, 655373, 1, 0, 589837, 131073, 0, 524301, 1, 0, 458765, 131073, 0, 458766, 1, 0, 655376, 131073, 0, 589840, 1, 0, 524304, 131073, 0, 458768, 131073, 0, 131083, 1, 0, 196611, 1, 0, 196618, 1, 0, 196622, 1, 0, 393229, 1, 0, 393224, 131073, 0, 131078, 131073, 0, 196614, 1, 0, 19, 131073, 0)

[node name="Door" parent="." instance=ExtResource("5")]
position = Vector2(304, 40)
script = null

[node name="Area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
position = Vector2(296, 32)
shape = SubResource("8")

[node name="Chest" parent="." instance=ExtResource("6")]
position = Vector2(280, 136)
script = ExtResource("8")

[node name="KnightPlayer" parent="." instance=ExtResource("7")]
position = Vector2(7, 96)

[connection signal="body_entered" from="Area1" to="." method="_on_Area1_body_entered"]
[connection signal="body_exited" from="Area1" to="." method="_on_Area1_body_exited"]
[connection signal="body_entered" from="Chest/chest_Zone" to="Chest" method="_on_chest_Zone_body_entered"]
[connection signal="body_exited" from="Chest/chest_Zone" to="Chest" method="_on_chest_Zone_body_exited"]

[editable path="Door"]
[editable path="Chest"]
